--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -2,10 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-    font-family: Arial, Helvetica, sans-serif;
-}
-
 @layer utilities {
     .text-balance {
         text-wrap: balance;
@@ -88,5 +84,16 @@ body {
 
     .flex-between {
         @apply flex items-center justify-between;
+    }
+}
+
+
+
+@layer base {
+  * {
+    @apply border-border;
+    }
+  body {
+    @apply bg-background text-foreground;
     }
 }
